--- a/src/main/resources/templates/companyProfile.html
+++ b/src/main/resources/templates/companyProfile.html
@@ -37,8 +37,8 @@
     </div>
     <section class="profileDetails">
         <div class="row">
-            <div class="col m6 s12">
-                <h4>Your Gigs
+            <div class="col l6 s12">
+                <h4 class="center-align">Your Gigs
                     <span>
         <a th:href="@{/company/create-gig/}" class="waves-effect waves-light btn-floating tooltipped" data-position="top" data-delay="50" data-tooltip="Create a Gig">
             <i class="material-icons">add</i>
@@ -49,31 +49,33 @@
                 <div th:if="${companyProfile.getGigs().isEmpty()}">
                     <h5>You haven't created any Gigs</h5>
                 </div>
+                <div class="row">
+                <div  th:each="gig : ${gig}">
+                    <div class="col s12 m6">
 
-                <div th:each="gig : ${gig}" >
+                            <div class="gigCard z-depth-2">
+                                <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+                                    <div class="dateBox white orange-text text-accent-4 center-align">
+                                        <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
+                                        <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+                                    </div>
+                                </div>
+                                <div class="gigInfo white center-align">
+                                    <p><b>[[${gig.gigTitle}]]</b></p>
+                                    <p >[[${gig.gigLocation}]]</p>
+                                    <div class="divider"></div>
+                                    <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/company/gig/' + @{${gig.id}}">Musicians Applied <span class="badge">[[${gig.getMusicianApplyGigs().size()}]]</span></a>
 
-                    <div class="col s12 m8">
-                        <div class="card small darken-2">
-                            <div class="card-content">
-
-                                <span class="card-title">[[${gig.gigTitle}]]</span>
-                                <p>Time: [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] - [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</p>
-                                <p >[[${gig.gigType}]]</p>
-                                <p >[[${gig.gigLocation}]]</p>
-
-                            </div>
-                            <div class="card-action center-align">
-                                <div class="row ">
-                                    <a class="waves-effect waves-light btn" th:href="'/company/gig/' + @{${gig.id}}">Musicians Applied <span class="badge">[[${gig.getMusicianApplyGigs().size()}]]</span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
 
             </div>
-            <div class="col s12 m6">
-                <h4>Musicians in the Area
+            <div class="col s12 l6">
+                <h4 class="center-align">Musicians in the Area
                     <span>
                     <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/company/search/"><i class="material-icons">search</i></a>
                 </span>
@@ -81,25 +83,31 @@
                 <div th:if="${musician.isEmpty()}">
                     <h5>No Musicians are in your area</h5>
                 </div>
-                <div  th:each="musician : ${musician}">
-                    <div class="col s12 m6">
-                        <div class="card medium">
-                            <div class="card-image">
-                                <img th:src="@{${musician.profPicImage}} "/>
-                            </div>
-                            <div class="card-content center-align">
-                                <span class="card-title" th:text="${musician.firstName} +' '+ ${musician.lastName}"></span>
-                                <p class="" th:text="${musician.musicianInstruments}"></p>
-                            </div>
-                            <div class="card-action center-align">
-                                <a th:href="'/home/find-bands/' + @{${musician.id}}" class="btn  waves-effect waves-light">Go To Profile</a>
+                <div  th:each="musician : ${musician}" class="container">
+                    <div class="musicianCards ">
+                        <a th:href="'/company/find-bands/' + @{${musician.id}}" >
+
+                            <div class="  white hoverable z-depth-2">
+
+                                <div class="valign-wrapper">
+                                    <div class="left ">
+                                        <img th:src="@{${musician.profPicImage}} " class="cardImage circle"/>
+                                    </div>
+
+                                    <div class="musicianInfo black-text">
+                                        <p ><b>[[${musician.firstName}]] [[${musician.lastName}]]</b></p>
+                                        <p>[[${musician.musicianInstruments}]]</p>
+                                    </div>
+                                </div>
 
                             </div>
-                        </div>
+                        </a>
                     </div>
+
+
                 </div>
             </div>
-            </div>
+        </div>
 
 
     </section>
