--- a/src/main/resources/templates/createCompany.html
+++ b/src/main/resources/templates/createCompany.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
-<body class="blue-grey lighten-5">
+<body class="blue-grey lighten-5" th:inline="text">
 <div th:include="navbar :: navHome"></div>
 
 <main class="container">
