--- a/src/main/resources/templates/createMusician.html
+++ b/src/main/resources/templates/createMusician.html
@@ -11,12 +11,12 @@
             <div th:object="${user}">
                 <div class="row">
                     <div class="input-field col s12 m6">
-                        <input id="username" type="text" th:field="*{username}" placeholder="Username"/>
+                        <input id="username" type="text" th:field="*{username}" />
                         <label for="username">Username</label>
                     </div>
                     <div class="input-field col s12 m6">
                         <label for="password">Password</label>
-                        <input id="password" type="password" th:field="*{password}" placeholder="Password"/>
+                        <input id="password" type="password" th:field="*{password}" />
 
                     </div>
                 </div>
