--- a/src/main/resources/templates/gigDetails.html
+++ b/src/main/resources/templates/gigDetails.html
@@ -29,60 +29,37 @@
 
 
             </div>
-            <table>
-                <tr>
-                    <td class="right-align">
-                        <img th:src="@{${gig.gigArt}}" th:alt="${gig.gigDescription}"/>
-                    </td>
-                    <td>
-                        <h1>[[${gig.gigTitle}]]</h1>
 
-                    </td>
-                </tr>
-                <tr>
-                    <td class="right-align">
-                        <i class="orange-text text-accent-4 material-icons">view_list</i>
+            <div>
+                <img th:src="@{${gig.gigArt}}" th:alt="${gig.gigDescription}"/>
+                <h1>[[${gig.gigTitle}]]</h1>
+                <p>[[${gig.gigType}]]</p>
+                <p>Starts [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] -  Ends [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]</p>
+                <p>[[${gig.gigLocation}]]</p>
+                <h5>[[${gig.gigDescription}]]</h5>
 
-                    </td>
-                    <td>
-                        <h4>
-                            [[${gig.gigType}]]
-                        </h4>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="right-align">
-                        <i class="orange-text text-accent-4 material-icons">event</i>
+            </div>
 
-                    </td>
-                    <td>
-                        <h4>
-                            Starts [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]] -  Ends [[${#dates.format(gig.gigEnd,'EEE, d MMM yyyy')}]]
-
-                        </h4>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="right-align">
-                        <i class="orange-text text-accent-4 material-icons">location_on</i>
-
-                    </td>
-                    <td>
-                        <h4>
-                            [[${gig.gigLocation}]]
-
-                        </h4>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>
-                        <h5>[[${gig.gigDescription}]]</h5>
-                    </td>
-                </tr>
-            </table>
             <div sec:authorize="hasRole('ROLE_COMPANY')" class="row" th:each="applied : ${applied}">
+                <div class="musicianCards">
+                    <a th:href="'/company/find-bands/' + @{${applied.musicianProfile.id}}" >
+
+                        <div class="  white hoverable z-depth-2">
+
+                            <div class="valign-wrapper">
+                                <div class="left ">
+                                    <img th:src="@{${musician.profPicImage}} " class="cardImage circle"/>
+                                </div>
+
+                                <div class="musicianInfo black-text">
+                                    <p ><b>[[${applied.musicianProfile.firstName}]] [[${applied.musicianProfile.lastName}]]</b></p>
+                                    <p>[[${applied.musicianProfile.musicianInstruments}]]</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </a>
+                </div>
                 <div class="col s12 m6">
                     <div class="card medium">
                         <div class="card-image">
