--- a/src/main/resources/templates/modals.html
+++ b/src/main/resources/templates/modals.html
@@ -7,14 +7,24 @@
 <div th:fragment="signupModal">
     <div id="signupModal" class="modal">
         <div class="modal-content">
-            <div class="container">
-                <h1>LOGIN</h1>
+            <div class="">
+                <h3>LOGIN</h3>
                 <div style="color: red;" th:text="${error}"></div>
 
                 <form th:action="@{/login}" th:object="${user}" method="post">
-                    <input type="text" th:field="*{username}" placeholder="Username" autofocus="autofocus"/>
-                    <input type="password" th:field="*{password}" placeholder="Password"/>
-                    <button class="waves-effect waves-light btn" type="submit" >Login</button>
+                    <div class="input-field">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input id="username" type="text" th:field="*{username}" autofocus="autofocus"/>
+                        <label for="username">Username</label>
+
+                    </div>
+                    <div class="input-field">
+                        <i class="material-icons prefix">lock</i>
+
+                        <input id="password" type="password" th:field="*{password}" />
+                        <label for="password">Password</label>
+                    </div>
+                    <button class="waves-effect waves-light btn right loginBtn" type="submit" >Login</button>
                 </form>
             </div>
             </div>
