--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -36,7 +36,7 @@
                 <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-bands}">Find a Band</a></li>
                 <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-bands}">Find a Band</a></li>
 
-                <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger orange accent-4" href="#signupModal">Sign In</a></li>
+                <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger orange accent-4" href="#signupModal" style="margin-right: 0px;">Login</a></li>
                 <li sec:authorize="isAuthenticated()"><a class="dropdown-button" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">@[[${user.username}]]<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
         </div>
