updated musician profile and gig details page

--- a/src/main/resources/templates/createGig.html
+++ b/src/main/resources/templates/createGig.html
@@ -61,8 +61,18 @@
                     <input id="start" type="date" class="datepicker" th:field="*{gigStart}"/>
                 </div>
                 <div class="input-field col s6">
+                    <input id="timeStart" type="text" class="timepicker" th:field="*{timeStart}"/>
+                    <label for="timeStart">Start Time</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s6">
                     <label for="end">End</label>
                     <input id="end" type="date" class="datepicker" th:field="*{gigEnd}"/>
+                </div>
+                <div class="input-field col s6">
+                    <input id="timeEnd" type="text" class="timepicker" th:field="*{timeEnd}"/>
+                    <label for="timeEnd">End Time</label>
                 </div>
             </div>
             <div class="row">
