--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -50,11 +50,27 @@
     text-decoration: none;
     background-color: red !important;
 }
+nav{
+    background-color: rgba(0, 0, 0, 0.12);
+    position: absolute;
+    z-index:1;
 
+}
+.navAvatar{
+    border: 1px solid #FD6D22;
+    width: 50px;
+    margin-left: 8px;
+}
 #logo {
     font-size: 6.8em;
+    line-height: 80vh;
 }
-
+#logBtn{
+    border: 1px solid #FFF;
+    border-radius: 15px;
+    padding: 5px 20px;
+    display: inline;
+}
 .top {
 
     background-image: url("/assets/images/microphone_wallpaper copy.jpg");
@@ -63,9 +79,12 @@
     height: 100vh;
 }
 
+
+
 .brand-logo {
     font-family: 'Great Vibes', cursive;
     margin-left: 15px;
+
 }
 
 .loginLogo {
@@ -77,7 +96,7 @@
     position: absolute;
     font-size: 2em;
     left: 50%;
-    bottom: 0px;
+    bottom: 10px;
 }
 
 #choiceSection {
@@ -173,6 +192,20 @@
     text-transform: uppercase;
 }
 
+.profCol{
+    position: relative;
+    top: -250px;
+    left: 100px;
+    width: 300px;
+
+}
+.profInfo p{
+    margin: 0;
+    margin-bottom: 10px;
+}
+.profInfo{
+    padding: 25px;
+}
 .coverBanner {
     color: rgba(253, 109, 34, 0.75);
     font-size: 1em;
@@ -211,11 +244,8 @@
     height: 250px;
 }
 
-.profPic {
+.profImage {
     opacity: 1;
-    display: block;
-    width: 100%;
-    height: 100%;
     transition: .5s ease;
     backface-visibility: hidden;
 }
@@ -224,22 +254,23 @@
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
 }
 
-#picParent:hover .profPic {
+.profImage:hover{
     opacity: 0.8;
 }
 
-#picParent:hover .middle {
+.profImage:hover .middle {
     opacity: 1;
 }
 
 #hover-content {
     background-color: rgba(48, 48, 48, 0.91);
+    border: 1px solid lightgray;
     color: white;
     font-size: 16px;
     border-radius: 5px;
@@ -259,7 +290,7 @@
 }
 
 .profileBanner {
-    height: 300px;
+    height: 400px;
 
 }
 
@@ -268,18 +299,23 @@
 }
 
 .bannerBio {
-    position: absolute;
-    background-color: rgba(48, 48, 48, 0.91);
-    border-radius: 5px;
-    border: 1px solid #000;
-    top: 150px;
+    position: relative;
+    top: 190px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
     max-width: 30vw;
 }
-
+.bannerBio h4{
+    font-size: 3em;
+}
+.bannerBio p{
+    font-size: 2em;
+}
+.bannerBio h4, p{
+    margin: 0;
+}
 .mediaTitle {
     font-size: 1.3em;
 }
@@ -372,7 +408,7 @@ img.responsive-img {
 .gigApplied{
     border: 1px solid #FD6D22;
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
 }
 .dateBox{
     position: relative;
@@ -390,8 +426,11 @@ img.responsive-img {
 .gigCard p, .dateBox h4{
     margin: 0px;
 }
-.gigImage{
-    height: 200px;
+.gig .gigImage{
+    object-fit: cover;
+    width: 100%;
+    margin-bottom: -5px;
+    height: 250px;
 }
 .gigInfo{
     padding: 15px;
@@ -401,4 +440,82 @@ img.responsive-img {
 }
 .gigCard .btn{
     padding: 0px 1rem;
+}
+.gigDetailsCard .row {
+    margin-bottom: 0px;
+}
+#gigImage{
+    height: 300px;
+}
+#gigDetailsImage{
+    padding-right: 0px;
+}
+#gigDetailsMap{
+    padding-left: 0px;
+
+}
+.locationBox{
+    background-color: #FFF;
+    width: 30%;
+    min-width: 200px;
+    position: relative;
+    top: 20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 2%;
+}
+.locationBox .row{
+    margin-bottom: 0px;
+}
+.gigAction {
+    padding: 15px;
+}
+.gigAction .row{
+    margin: 0px;
+}
+.appliedNum{
+    color: #FD6D22;
+}
+.gigNav{
+position: relative;
+}
+.gig{
+    position: relative;
+    top: -350px;
+}
+.gig h1, .musiciansApplied .row, .timePlace .row{
+    margin: 0;
+}
+.gigTitle{
+    font-size: 2.5em;
+    padding: 0 10px;
+}
+.gigType{
+    padding: 15px;
+    font-size: .5em;
+}
+.gigDescript{
+    font-size: 2em;
+}
+.appliedTitle{
+    font-size: 1.4em;
+    text-align: right;
+    border-right: 1px solid lightgray;
+    padding-right: 5px;
+}
+.appliedAvatar{
+    width: 75px;
+}
+.appliedAvatar:hover{
+    border: 2px solid #FD6D22;
+}
+.gig section{
+    border: 1px solid lightgray;
+}
+.timePlace{
+    font-size: 1.5em;
+    padding: 5px 0px 5px 5px;
+}
+.timePlace i{
+    margin-right: 10px;
 }
