--- a/src/main/resources/templates/musicianProfile.html
+++ b/src/main/resources/templates/musicianProfile.html
@@ -3,130 +3,152 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
 <body th:inline="text" class="blue-grey lighten-5">
-<div th:include="navbar :: navHome"></div>
 
 
 <main  th:inline="text" >
     <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianProfile.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+        <div th:include="navbar :: navHome"></div>
+
         <a href="#coverMusicianPic" class="modal-trigger tooltipped" data-position="right" data-delay="50" data-tooltip="Update Cover Image"><i class="coverBanner text-accent-4 material-icons">camera_alt</i></a>
-        <div class="white-text center-align bannerBio ">
-            <h4  th:text="${musicianProfile.firstName} +' '+ ${musicianProfile.lastName}"></h4>
-            <h5> "[[${musicianProfile.bio}]]"</h5>
-        </div>
-        <div  id="picParent">
-            <img class="profPic circle z-depth-5 responsive-img" th:src="@{${musicianProfile.profPicImage}}" th:alt="${user.username}"/>
-            <div class="middle">
-                <div  id="hover-content">
-                    <a href="#profMusicianPic" class=" modal-trigger"><i class=" orange-text text-accent-4 material-icons bannerEdit">edit</i><br/><span class="profMessage white-text">Update Profile Image</span>
-                    </a>
-                </div>
-            </div>
+        <div class="white-text  bannerBio ">
+            <h4>[[${musicianProfile.firstName}]] [[${musicianProfile.lastName}]] -- [[${user.username}]]</h4>
+            <p > [[${musicianProfile.location}]]</p>
 
         </div>
+
     </section>
-    <div class="row bioRow black white-text">
-        <div class="col s3 offset-l3">
-            <p  class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">account_circle</i> [[${user.username}]]</p>
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">location_on</i> [[${musicianProfile.location}]]</p>
-        </div>
-        <div class="col s3">
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianProfile.musicianEmail}]] </p>
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianProfile.musicianPhoneNumber}]]</p>
 
-        </div>
-        <div class="col s3">
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianProfile.musicianInstruments}]]</p>
-
-            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">cake</i> [[${#dates.format(musicianProfile.birthDate,'MMM d, yyyy')}]]</p>
-        </div>
-
-    </div>
-    <div class="profileDetails">
-        <div class="row">
-            <div class="col s12 m4">
-                <h3 class="center-align">Gigs in the Area
-                    <span>
-                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/musician/search/"><i class="material-icons">search</i></a>
-                </span>
-                </h3>
-                <div th:if="${gig.isEmpty()}">
-                    <h5>No Gigs found in your area</h5>
-                </div>
-                <div class="card gigCard"  th:each="gig : ${gig}">
-                    <div class="card-content">
-                        <div class="row">
-                            <div class="col s4">
-                                <img class="localGigs" th:src="${gig.gigArt}" alt=""/>
-                            </div>
-                            <div class="col s8 cardGigDetails">
-                                <p class="valign-wrapper">
-                                    <i class="orange-text text-accent-4 material-icons">event_note</i>
-                                    [[${gig.gigTitle}]]
-                                </p>
-                                <p class="valign-wrapper">
-                                    <i class="orange-text text-accent-4 material-icons">event</i>
-                                    [[${#dates.format(gig.gigStart,'EEE, d MMM yyyy')}]]
-                                </p>
-                            </div>
+    <div class="profileDetails row">
+        <div class="col s12 m4">
+            <div class="profCol z-depth-5">
+                <div class="profImage" th:style="'background:url('+ @{${musicianProfile.profPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 400px;'">
+                    <div class="middle">
+                        <div  id="hover-content">
+                            <a href="#profMusicianPic" class=" modal-trigger"><i class=" orange-text text-accent-4 material-icons bannerEdit">edit</i><br/><span class="profMessage white-text">Update Profile Image</span>
+                            </a>
                         </div>
                     </div>
-                    <div class="card-action">
-                        <a class="btn" th:href="'/musician/gig/' + @{${gig.id}}">More Info</a>
-
-                    </div>
                 </div>
+                <div class="profInfo white">
+                    <section >
+                        <div class="section">
+                            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">star</i> [[${musicianProfile.musicianInstruments}]]</p>
 
-            </div>
-            <div class="col s12 m4">
+                        </div>
 
-                <h3 class="center-align">My Music
-                    <span>
-                <a class="waves-effect waves-light btn-floating modal-trigger tooltipped" data-position="top" data-delay="50" data-tooltip="Add a YouTube video of your music" href="#addMusicContent"><i class="material-icons">add</i></a>
-                </span>
-                    <div th:if="${media.isEmpty()}">
-                        <h5>Add Your Music</h5>
-                    </div>
-                </h3>
-                <table class="bordered white">
-                    <tr  th:each="media : ${media}">
-                        <td class="valign-wrapper">
-                            <i class="orange-text text-accent-4 material-icons">music_note</i>
-                            <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
-                        </td>
-                        <td>
-                            <a class="waves-effect waves-light modal-trigger btn-flat float-right" th:href="'#mediaUpdate' + ${media.id}">
-                                <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Music">edit</i>
-                            </a>
-                        </td>
-                        <td>
-                            <form th:action="'/musician/media/delete/' + ${media.id}" method="post">
-                                <button class="modal-action media waves-effect waves-light btn-flat" type="submit" >
-                                    <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Music">delete</i>
-                                </button>
-                            </form>
-                        </td>
-                        <div th:include="modals :: mediaUpdate"></div>
-                    </tr>
-                </table>
-            </div>
-            <div class="col s12 m4">
-                <h3 class="center-align">Applied Gigs</h3>
+                            <div class="divider"></div>
+<div class="section">
+    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${musicianProfile.musicianEmail}]] </p>
+    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${musicianProfile.musicianPhoneNumber}]]</p>
 
-                <ul class="collection with-header " >
+    <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">cake</i> [[${#dates.format(musicianProfile.birthDate,'MMM d, yyyy')}]]</p>
+</div>
 
-                    <li th:each="applied : ${applied}" class="collection-item avatar">
-                        <i class="orange-text text-accent-4 material-icons circle white">event</i>
-                        <p> [[${applied.gig.gigTitle}]]</p>
-                        <p>[[${#dates.format(applied.gig.gigStart,'EEE, d MMM yyyy')}]]</p>
-                        <a class="secondary-content" th:href="'/musician/gig/' + @{${applied.gig.id}}"  >
-                            <i class="orange-text text-accent-4 material-icons ">send</i>
+                        <div class="divider"></div>
+                        <div class="section">
+                            <p> [[${musicianProfile.bio}]]</p>
 
-                        </a>
-                    </li>
+                        </div>
 
-                </ul>
+                    </section>
+                    <section ></section>
+                </div>
             </div>
         </div>
+        <div class="col s12 m8">
+            <div class="row">
+                <div class="col s12 m12 card">
+
+                    <h4 class="center-align">My Music
+                        <span>
+                <a class="waves-effect waves-light btn-floating modal-trigger tooltipped" data-position="top" data-delay="50" data-tooltip="Add a YouTube video of your music" href="#addMusicContent"><i class="material-icons">add</i></a>
+                </span>
+                        <div th:if="${media.isEmpty()}">
+                            <h5>Add Your Music</h5>
+                        </div>
+                    </h4>
+                    <div class="card">
+                        <table class="bordered white container">
+                            <tr  th:each="media : ${media}">
+                                <td class="valign-wrapper">
+                                    <i class="orange-text text-accent-4 material-icons">music_note</i>
+                                    <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
+                                </td>
+                                <td>
+                                    <a class="waves-effect waves-light modal-trigger btn-flat float-right" th:href="'#mediaUpdate' + ${media.id}">
+                                        <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Music">edit</i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <form th:action="'/musician/media/delete/' + ${media.id}" method="post">
+                                        <button class="modal-action media waves-effect waves-light btn-flat" type="submit" >
+                                            <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Music">delete</i>
+                                        </button>
+                                    </form>
+                                </td>
+                                <div th:include="modals :: mediaUpdate"></div>
+                            </tr>
+                        </table>
+                    </div>
+
+                </div>
+                <div class="col s12 m5 ">
+                    <h4 class="center-align">Gigs in the Area
+                        <span>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/musician/search/"><i class="material-icons">search</i></a>
+                </span>
+                    </h4>
+                    <div th:if="${gig.isEmpty()}">
+                        <h5>No Gigs found in your area</h5>
+                    </div>
+                    <div   th:each="gig : ${gig}">
+
+                        <div class="gigCard z-depth-2">
+                            <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+                                <div class="dateBox white orange-text text-accent-4 center-align">
+                                    <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
+                                    <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+                                </div>
+                            </div>
+                            <div class="gigInfo white center-align">
+                                <p><b>[[${gig.gigTitle}]]</b></p>
+                                <p >[[${gig.gigLocation}]]</p>
+                                <div class="divider"></div>
+                                <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">More Info</a>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col s12 m5 offset-m1 ">
+                    <h4 class="center-align">Applied Gigs</h4>
+
+
+                        <div th:each="applied : ${applied}" >
+                            <div class="gigCard z-depth-2">
+                                <div class="gigImage" th:style="'background:url('+ @{${applied.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+                                    <div class="dateBox white orange-text text-accent-4 center-align">
+                                        <h4>[[${#dates.format(applied.gig.gigStart,'d')}]]</h4>
+                                        <p>[[${#dates.format(applied.gig.gigStart,'MMMM')}]]</p>
+                                    </div>
+                                </div>
+                                <div class="gigInfo white center-align">
+                                    <p><b>[[${applied.gig.gigTitle}]]</b></p>
+                                    <p >[[${applied.gig.gigLocation}]]</p>
+                                    <div class="divider"></div>
+                                    <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${applied.gig.id}}">More Info</a>
+
+                                </div>
+                            </div>
+                        </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
