--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,29 +19,41 @@
 
                 </li>
             </ul>
-<header class="navbar">
-    <nav class="black">
-        <div class=" nav-wrapper">
-            <a sec:authorize="!isAuthenticated()" href="/" class="brand-logo">gigFinder</a>
 
-            <a href="/company/my-profile" sec:authorize="hasRole('ROLE_COMPANY')" class="brand-logo">gigFinder</a>
 
-            <a href="/musician/my-profile" sec:authorize="hasRole('ROLE_MUSICIAN')" class="brand-logo">gigFinder</a>
+        <nav>
+            <div class=" nav-wrapper">
+                <a sec:authorize="!isAuthenticated()" href="/" class="brand-logo">gigFinder</a>
 
-            <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" class="brand-logo">gigFinder</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-gigs}">Find a Gig</a></li>
-                <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-gigs}">Find a Gig</a></li>
+                <a href="/company/my-profile" sec:authorize="hasRole('ROLE_COMPANY')" class="brand-logo">gigFinder</a>
 
-                <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-bands}">Find a Band</a></li>
-                <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-bands}">Find a Band</a></li>
+                <a href="/musician/my-profile" sec:authorize="hasRole('ROLE_MUSICIAN')" class="brand-logo">gigFinder</a>
 
-                <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger orange accent-4" href="#signupModal" style="margin-right: 0px;">Login</a></li>
-                <li sec:authorize="isAuthenticated()"><a class="dropdown-button" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">@[[${user.username}]]<i class="material-icons right">arrow_drop_down</i></a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+                <a href="/admin" sec:authorize="hasRole('ROLE_ADMIN')" class="brand-logo">gigFinder</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-gigs}">Find a Gig</a></li>
+                    <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-gigs}">Find a Gig</a></li>
+
+                    <li><a sec:authorize="hasRole('ROLE_COMPANY')" th:href="@{/company/find-bands}">Find a Band</a></li>
+                    <li><a sec:authorize="hasRole('ROLE_MUSICIAN')" th:href="@{/musician/find-bands}">Find a Band</a></li>
+
+                    <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger" id="logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
+                    <li sec:authorize="hasRole('ROLE_COMPANY')">
+                        <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
+                            [[${user.username}]] <img th:src="@{${companyProfile.companyProfPic}} " class="navAvatar circle"/>
+                            <i class="material-icons right">arrow_drop_down</i></a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_MUSICIAN')">
+                        <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
+                            [[${user.username}]] <img th:src="@{${musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                            <i class="material-icons right">arrow_drop_down</i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+
 </div>
 
 <span th:include="includes :: js"></span>
